--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,7 @@
-name = "ACE"
-uuid = "3e8ccfd2-c8b0-11ea-32f1-f3a5990fd77a"
-version = "0.12.46"
+name = "ACEfrictionCore"
+uuid = "78da5da9-a47b-43cd-ab26-de0acd0e91ff"
+authors = ["MatthiasSachs <m.sachs@bham.ac.uk>"]
+version = "0.1.0"
 
 [deps]
 ACEbase = "14bae519-eb20-449c-a949-9c58ed33163e"
