--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -34,7 +34,7 @@ jobs:
         using InteractiveUtils; versioninfo()
         using Pkg
         Pkg.pkg"update"
-        Pkg.pkg"registry add https://github.com/JuliaMolSim/MolSim.git"
+        Pkg.pkg"registry add https://github.com/ACEsuit/ACEregistry"
         Pkg.activate(".")
         Pkg.test("ACEfrictionCore")
       shell: bash -c "julia --color=yes {0}"
