--- a/Project.toml
+++ b/Project.toml
@@ -24,8 +24,19 @@ UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 
 [compat]
 ACEbase = "0.4.5"
+Combinatorics = "1.0.3"
+DataStructures = "0.19.1"
+JSON = "0.21, 0.22"
 JuLIP = "0.16.0"
-NamedTupleTools = "0.13"
+LegibleLambdas = "0.3.0"
+LinearAlgebra = "1.11"
+NamedTupleTools = "0.14"
+Random = "1.11"
+Reexport = "1.2"
+Roots = "2.2"
+SparseArrays = "1.11"
+StaticArrays = "1.9.15"
+UnsafeArrays = "1.0.8"
 julia = "1.11"
 
 [extras]
